Justifying the datastructures and implementing transaction class and loaded transaction data.

--- a/lab2-9013742.ipynb
+++ b/lab2-9013742.ipynb
@@ -18,12 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "49843bc5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from dataclasses import dataclass\n"
    ]
   },
   {
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "3b4700fd",
    "metadata": {},
    "outputs": [
@@ -95,6 +96,78 @@
     "df = pd.read_csv(\"data/clothing_transactions.csv\")\n",
     "print(\"Columns:\", df.columns.tolist())\n",
     "print(df.head(20))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c8a1a59",
+   "metadata": {},
+   "source": [
+    "#### Justify dict vs namedtuple vs class (1–2 sentences)\n",
+    "#### Dictionary--A flexible way to store data using key-value pairs.\n",
+    "#### NamedTuple--Like a tuple, but you can access values using names.\n",
+    "#### Class--A way to group data and functions together.\n",
+    "\n",
+    "##### Class is the best option for me because it includes logics like cleaning, transforming and computing totals. So this will allow me to show better modularity and resuability for each transaction object.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e52f1d02",
+   "metadata": {},
+   "source": [
+    "##### Implementing the transaction class and using to populate "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "db14b3cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class Transaction:\n",
+    "    date: str\n",
+    "    customer_id: str\n",
+    "    product_id: str\n",
+    "    price: float\n",
+    "    quantity: int\n",
+    "    coupon_code: str\n",
+    "    shipping_city: str\n",
+    "    postal_code: str\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02d7546d",
+   "metadata": {},
+   "source": [
+    "##### creating a method as load_transaction  and returning the list of transactions "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5b2b893b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_transactions(path: str) -> list[Transaction]:\n",
+    "    df = pd.read_csv(path)\n",
+    "    return [\n",
+    "        Transaction(\n",
+    "            date=row[\"date\"],\n",
+    "            customer_id=row[\"customer_id\"],\n",
+    "            product_id=row[\"product_id\"],\n",
+    "            price=row[\"price\"],\n",
+    "            quantity=row[\"quantity\"],\n",
+    "            coupon_code=row[\"coupon_code\"],\n",
+    "            shipping_city=row[\"shipping_city\"]\n",
+    "        ) for _, row in df.iterrows()\n",
+    "    ]\n"
    ]
   }
  ],
