--- a/lab2-9013742.ipynb
+++ b/lab2-9013742.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 84,
    "id": "49843bc5",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 85,
    "id": "3b4700fd",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 86,
    "id": "db14b3cd",
    "metadata": {},
    "outputs": [],
@@ -145,24 +145,15 @@
    "id": "02d7546d",
    "metadata": {},
    "source": [
-    "##### creating a method as load_transaction  and returning the list of transactions "
+    "##### creating a method as load_transaction  and returning the list of transactions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "5b2b893b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (2667166240.py, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[41]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mshipping_city=row[\"shipping_city\"]\u001b[39m\n                  ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax. Perhaps you forgot a comma?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def load_transactions(path: str) -> list[Transaction]:\n",
     "    df = pd.read_csv(path)\n",
@@ -190,44 +181,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "4078f414",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def profile_transactions_summary(transactions: list) -> None:\n",
-    "    prices = [float(t.price) for t in transactions if isinstance(t.price, (int, float))]\n",
-    "    cities = {t.shipping_city for t in transactions}\n",
+    "def profile_transactions_summary(list_of_transactions) -> None:\n",
+    "    prices = [float(t.price) for t in list_of_transactions if isinstance(t.price, (int, float))]\n",
+    "    cities = {t.shipping_city for t in list_of_transactions}\n",
     "    \n",
     "    print(\"Step 5: Quick Profiling\")\n",
-    "    print(f\"Price Stats - Min: {min(prices)}, Mean: {sum(prices)/len(prices):.2f}, Max: {max(prices)}\")\n",
+    "    print(f\"Price Stats - Minimun: {min(prices)}, Mean: {sum(prices)/len(prices):.2f}, Maximum: {max(prices)}\")\n",
     "    print(f\"Unique Shipping Cities: {len(cities)}\\n\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "1429d4a6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Transaction.__init__() missing 1 required positional argument: 'postal_code'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[37]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m transactions = \u001b[43mload_transactions\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdata/clothing_transactions.csv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m profile_transactions_summary(transactions)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[35]\u001b[39m\u001b[32m, line 3\u001b[39m, in \u001b[36mload_transactions\u001b[39m\u001b[34m(path)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mload_transactions\u001b[39m(path: \u001b[38;5;28mstr\u001b[39m) -> \u001b[38;5;28mlist\u001b[39m[Transaction]:\n\u001b[32m      2\u001b[39m     df = pd.read_csv(path)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m[\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m        \u001b[49m\u001b[43mTransaction\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m            \u001b[49m\u001b[43mdate\u001b[49m\u001b[43m=\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdate\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m            \u001b[49m\u001b[43mcustomer_id\u001b[49m\u001b[43m=\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcustomer_id\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m            \u001b[49m\u001b[43mproduct\u001b[49m\u001b[43m=\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mproduct\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m            \u001b[49m\u001b[43mprice\u001b[49m\u001b[43m=\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mprice\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m            \u001b[49m\u001b[43mquantity\u001b[49m\u001b[43m=\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mquantity\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[43m            \u001b[49m\u001b[43mcoupon_code\u001b[49m\u001b[43m=\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcoupon_code\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[43m            \u001b[49m\u001b[43mshipping_city\u001b[49m\u001b[43m=\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mshipping_city\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43m_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrow\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43miterrows\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     13\u001b[39m \u001b[43m    \u001b[49m\u001b[43m]\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[35]\u001b[39m\u001b[32m, line 4\u001b[39m, in \u001b[36m<listcomp>\u001b[39m\u001b[34m(.0)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mload_transactions\u001b[39m(path: \u001b[38;5;28mstr\u001b[39m) -> \u001b[38;5;28mlist\u001b[39m[Transaction]:\n\u001b[32m      2\u001b[39m     df = pd.read_csv(path)\n\u001b[32m      3\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m [\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m         \u001b[43mTransaction\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m            \u001b[49m\u001b[43mdate\u001b[49m\u001b[43m=\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdate\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m            \u001b[49m\u001b[43mcustomer_id\u001b[49m\u001b[43m=\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcustomer_id\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m            \u001b[49m\u001b[43mproduct\u001b[49m\u001b[43m=\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mproduct\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m            \u001b[49m\u001b[43mprice\u001b[49m\u001b[43m=\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mprice\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m            \u001b[49m\u001b[43mquantity\u001b[49m\u001b[43m=\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mquantity\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[43m            \u001b[49m\u001b[43mcoupon_code\u001b[49m\u001b[43m=\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcoupon_code\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[43m            \u001b[49m\u001b[43mshipping_city\u001b[49m\u001b[43m=\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mshipping_city\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m _, row \u001b[38;5;129;01min\u001b[39;00m df.iterrows()\n\u001b[32m     13\u001b[39m     ]\n",
-      "\u001b[31mTypeError\u001b[39m: Transaction.__init__() missing 1 required positional argument: 'postal_code'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 5: Quick Profiling\n",
+      "Price Stats - Minimun: 15.02, Mean: 69.35, Maximum: 119.97\n",
+      "Unique Shipping Cities: 8\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "transactions = load_transactions(\"data/clothing_transactions.csv\")\n",
-    "profile_transactions_summary(transactions)"
+    "list_of_transactions= load_transactions(\"data/clothing_transactions.csv\")\n",
+    "profile_transactions_summary(list_of_transactions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76d6c71d",
+   "metadata": {},
+   "source": [
+    "##### Injecting the dirty data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "fe76c1d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inject_dirty_values(list_of_transactions) -> None:\n",
+    "    if len(list_of_transactions) >= 3:\n",
+    "        list_of_transactions[22].price = -373435\n",
+    "        list_of_transactions[545].price = \"adfadf\"\n",
+    "        list_of_transactions[200].price = \"unkown\"\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc43bcb2",
+   "metadata": {},
+   "source": [
+    "##### Created a function called as clean_invalid_prices and clearning values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "69a1a046",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_invalid_prices(list_of_transactions: list) -> None:\n",
+    "    before = sum(1 for t in list_of_transactions if not isinstance(t.price, float))\n",
+    "    \n",
+    "    for t in list_of_transactions:\n",
+    "        try:\n",
+    "            t.price = float(t.price)\n",
+    "            if t.price < 0:\n",
+    "                t.price = 0.0\n",
+    "        except:\n",
+    "            t.price = 0.0\n",
+    "\n",
+    "    \n",
+    "    after = sum(1 for t in list_of_transactions if not isinstance(t.price, float))\n",
+    "    \n",
+    "    print(f\"Step 7: Cleaned invalid prices — before: {before}, after: {after}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "c85e6770",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 7: Cleaned invalid prices — before: 3, after: 0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_transactions= load_transactions(\"data/clothing_transactions.csv\")\n",
+    "inject_dirty_values(list_of_transactions)\n",
+    "clean_invalid_prices(list_of_transactions)"
    ]
   }
  ],
