Done the transformation and done with  the feature engineering

--- a/lab2-9013742.ipynb
+++ b/lab2-9013742.ipynb
@@ -18,13 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 106,
    "id": "49843bc5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from dataclasses import dataclass\n"
+    "from dataclasses import dataclass\n",
+    "import re\n",
+    "from datetime import datetime\n"
    ]
   },
   {
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 107,
    "id": "3b4700fd",
    "metadata": {},
    "outputs": [
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 108,
    "id": "db14b3cd",
    "metadata": {},
    "outputs": [],
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 109,
    "id": "5b2b893b",
    "metadata": {},
    "outputs": [],
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 110,
    "id": "4078f414",
    "metadata": {},
    "outputs": [],
@@ -198,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 111,
    "id": "1429d4a6",
    "metadata": {},
    "outputs": [
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 112,
    "id": "fe76c1d3",
    "metadata": {},
    "outputs": [],
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 113,
    "id": "69a1a046",
    "metadata": {},
    "outputs": [],
@@ -275,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 114,
    "id": "c85e6770",
    "metadata": {},
    "outputs": [
@@ -292,6 +294,111 @@
     "list_of_transactions= load_transactions(\"data/clothing_transactions.csv\")\n",
     "inject_dirty_values(list_of_transactions)\n",
     "clean_invalid_prices(list_of_transactions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d06a07cd",
+   "metadata": {},
+   "source": [
+    "##### Making the transformations accordingly "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "00c00664",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def apply_coupon_discounts(list_of_transactions: list) -> None:\n",
+    "    for t in list_of_transactions:\n",
+    "        match = re.search(r\"SAVE(\\d+)\", str(t.coupon_code))\n",
+    "        t.discount_pct = int(match.group(1)) / 100 if match else 0.0\n",
+    "    print(\"Step 8: Applied coupon discounts (coupon_code → discount_pct).\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "e978f00c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 7: Cleaned invalid prices — before: 3, after: 0\n",
+      "\n",
+      "Step 8: Applied coupon discounts (coupon_code → discount_pct).\n",
+      "\n",
+      "Step 5: Quick Profiling\n",
+      "Price Stats - Minimun: 0.0, Mean: 69.02, Maximum: 119.97\n",
+      "Unique Shipping Cities: 8\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_transactions = load_transactions(\"data/clothing_transactions.csv\")\n",
+    "inject_dirty_values(list_of_transactions)\n",
+    "clean_invalid_prices(list_of_transactions)\n",
+    "apply_coupon_discounts(list_of_transactions)\n",
+    "profile_transactions_summary(list_of_transactions)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c501fad",
+   "metadata": {},
+   "source": [
+    "##### Doing feature engineering adding a method called days_since_purchase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "e8f08b4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_days_since_purchase(transactions: list) -> None:\n",
+    "    today = datetime.today()\n",
+    "    for t in transactions:\n",
+    "        t.days_since_purchase = (today - pd.to_datetime(t.date)).days\n",
+    "    print(\"Step 9: Added 'days_since_purchase' to each transaction.\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "54f29b3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 7: Cleaned invalid prices — before: 3, after: 0\n",
+      "\n",
+      "Step 8: Applied coupon discounts (coupon_code → discount_pct).\n",
+      "\n",
+      "Step 9: Added 'days_since_purchase' to each transaction.\n",
+      "\n",
+      "Step 5: Quick Profiling\n",
+      "Price Stats - Minimun: 0.0, Mean: 69.02, Maximum: 119.97\n",
+      "Unique Shipping Cities: 8\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_transactions = load_transactions(\"data/clothing_transactions.csv\")\n",
+    "inject_dirty_values(list_of_transactions)\n",
+    "clean_invalid_prices(list_of_transactions)\n",
+    "apply_coupon_discounts(list_of_transactions)\n",
+    "add_days_since_purchase(list_of_transactions)\n",
+    "profile_transactions_summary(list_of_transactions)\n"
    ]
   }
  ],
