Created a method for mini-aggregation and printing city by using revenue

--- a/lab2-9013742.ipynb
+++ b/lab2-9013742.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 225,
    "id": "49843bc5",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,8 @@
     "import pandas as pd\n",
     "from dataclasses import dataclass\n",
     "import re\n",
-    "from datetime import datetime\n"
+    "from datetime import datetime\n",
+    "from collections import defaultdict"
    ]
   },
   {
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 226,
    "id": "3b4700fd",
    "metadata": {},
    "outputs": [
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 227,
    "id": "db14b3cd",
    "metadata": {},
    "outputs": [],
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 228,
    "id": "5b2b893b",
    "metadata": {},
    "outputs": [],
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 229,
    "id": "4078f414",
    "metadata": {},
    "outputs": [],
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 230,
    "id": "1429d4a6",
    "metadata": {},
    "outputs": [
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 231,
    "id": "fe76c1d3",
    "metadata": {},
    "outputs": [],
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 232,
    "id": "69a1a046",
    "metadata": {},
    "outputs": [],
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 233,
    "id": "c85e6770",
    "metadata": {},
    "outputs": [
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 234,
    "id": "00c00664",
    "metadata": {},
    "outputs": [],
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 235,
    "id": "e978f00c",
    "metadata": {},
    "outputs": [
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 236,
    "id": "e8f08b4a",
    "metadata": {},
    "outputs": [],
@@ -371,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 237,
    "id": "54f29b3c",
    "metadata": {},
    "outputs": [
@@ -399,6 +400,73 @@
     "apply_coupon_discounts(list_of_transactions)\n",
     "add_days_since_purchase(list_of_transactions)\n",
     "profile_transactions_summary(list_of_transactions)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eed361ee",
+   "metadata": {},
+   "source": [
+    "##### created a method for implementing the mini-aggregation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "id": "0ffa7ab0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def aggregate_revenue_by_city(list_of_transactions: list) -> dict:\n",
+    "    city_revenue = defaultdict(float)\n",
+    "    for t in list_of_transactions:\n",
+    "        if isinstance(t.price, float):\n",
+    "            city_revenue [t.shipping_city] += t.price * t.quantity if t.price else 0\n",
+    "            \n",
+    "\n",
+    "\n",
+    "    return dict(city_revenue )\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5685a622",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 7: Cleaned invalid prices — before: 3, after: 0\n",
+      "\n",
+      "Step 8: Applied coupon discounts (coupon_code → discount_pct).\n",
+      "\n",
+      "Step 9: Added 'days_since_purchase' to each transaction.\n",
+      "\n",
+      "Step 5: Quick Profiling\n",
+      "Price Stats - Minimun: 0.0, Mean: 69.02, Maximum: 119.97\n",
+      "Unique Shipping Cities: 8\n",
+      "\n",
+      "Revenue by city: {'Halifax': 14672.939999999997, 'Vancouver': 20080.270000000008, 'Edmonton': 17604.15, 'Montreal': 17108.41, 'Calgary': 13570.070000000002, 'Toronto': 18650.100000000006, 'Ottawa': 17658.46, 'Winnipeg': 15552.23000000001}\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_transactions = load_transactions(\"data/clothing_transactions.csv\")\n",
+    "inject_dirty_values(list_of_transactions)\n",
+    "clean_invalid_prices(list_of_transactions)\n",
+    "apply_coupon_discounts(list_of_transactions)\n",
+    "add_days_since_purchase(list_of_transactions)\n",
+    "profile_transactions_summary(list_of_transactions)\n",
+    "city_revenue  = aggregate_revenue_by_city(list_of_transactions)\n",
+    "print(\"City Revenue:\", city_revenue )\n",
+    "\n"
    ]
   }
  ],
