explaining the usage of OOP's and merging the two CSV fiels

--- a/lab2-9013742.ipynb
+++ b/lab2-9013742.ipynb
@@ -18,16 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 112,
    "id": "49843bc5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from dataclasses import dataclass\n",
+    "from dataclasses import field\n",
+    "from typing import Optional\n",
     "import re\n",
     "from datetime import datetime\n",
-    "from collections import defaultdict"
+    "from collections import defaultdict\n",
+    "import json\n",
+    "import pyarrow as pa\n",
+    "import pyarrow.parquet as pq"
    ]
   },
   {
@@ -40,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 113,
    "id": "3b4700fd",
    "metadata": {},
    "outputs": [
@@ -124,11 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 114,
    "id": "db14b3cd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "@dataclass\n",
     "class Transaction:\n",
     "    date: str\n",
@@ -139,6 +145,8 @@
     "    coupon_code: str\n",
     "    shipping_city: str\n",
     "    postal_code: str\n",
+    "    coupon_discount_rate: float = field(default=0.0)  # Derived from coupon_code\n",
+    "    days_since_purchase: Optional[int] = field(default=None)  # Derived from purchase date\n",
     "\n",
     "    \n"
    ]
@@ -153,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 115,
    "id": "5b2b893b",
    "metadata": {},
    "outputs": [],
@@ -184,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 116,
    "id": "4078f414",
    "metadata": {},
    "outputs": [],
@@ -201,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 117,
    "id": "1429d4a6",
    "metadata": {},
    "outputs": [
@@ -231,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 118,
    "id": "fe76c1d3",
    "metadata": {},
    "outputs": [],
@@ -254,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 119,
    "id": "69a1a046",
    "metadata": {},
    "outputs": [],
@@ -273,24 +281,15 @@
     "    \n",
     "    after = sum(1 for t in list_of_transactions if not isinstance(t.price, float))\n",
     "    \n",
-    "    print(f\"Step 7: Cleaned invalid prices — before: {before}, after: {after}\\n\")\n"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 120,
    "id": "c85e6770",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Step 7: Cleaned invalid prices — before: 3, after: 0\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_of_transactions= load_transactions(\"data/clothing_transactions.csv\")\n",
     "inject_dirty_values(list_of_transactions)\n",
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 121,
    "id": "00c00664",
    "metadata": {},
    "outputs": [],
@@ -315,37 +314,7 @@
     "def apply_coupon_discounts(list_of_transactions: list) -> None:\n",
     "    for t in list_of_transactions:\n",
     "        match = re.search(r\"SAVE(\\d+)\", str(t.coupon_code))\n",
-    "        t.discount_pct = int(match.group(1)) / 100 if match else 0.0\n",
-    "    print(\"Step 8: Applied coupon discounts (coupon_code → discount_pct).\\n\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 235,
-   "id": "e978f00c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Step 7: Cleaned invalid prices — before: 3, after: 0\n",
-      "\n",
-      "Step 8: Applied coupon discounts (coupon_code → discount_pct).\n",
-      "\n",
-      "Step 5: Quick Profiling\n",
-      "Price Stats - Minimun: 0.0, Mean: 69.02, Maximum: 119.97\n",
-      "Unique Shipping Cities: 8\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "list_of_transactions = load_transactions(\"data/clothing_transactions.csv\")\n",
-    "inject_dirty_values(list_of_transactions)\n",
-    "clean_invalid_prices(list_of_transactions)\n",
-    "apply_coupon_discounts(list_of_transactions)\n",
-    "profile_transactions_summary(list_of_transactions)\n"
+    "        t.coupon_discount_rate = int(match.group(1)) / 100 if match else 0.0\n"
    ]
   },
   {
@@ -353,12 +322,12 @@
    "id": "9c501fad",
    "metadata": {},
    "source": [
-    "##### Doing feature engineering adding a method called days_since_purchase"
+    "##### Doing feature engineering adding a method called days_since_purchase and trying to calculate discount "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 122,
    "id": "e8f08b4a",
    "metadata": {},
    "outputs": [],
@@ -367,39 +336,7 @@
     "    today = datetime.today()\n",
     "    for t in transactions:\n",
     "        t.days_since_purchase = (today - pd.to_datetime(t.date)).days\n",
-    "    print(\"Step 9: Added 'days_since_purchase' to each transaction.\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
-   "id": "54f29b3c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Step 7: Cleaned invalid prices — before: 3, after: 0\n",
-      "\n",
-      "Step 8: Applied coupon discounts (coupon_code → discount_pct).\n",
-      "\n",
-      "Step 9: Added 'days_since_purchase' to each transaction.\n",
-      "\n",
-      "Step 5: Quick Profiling\n",
-      "Price Stats - Minimun: 0.0, Mean: 69.02, Maximum: 119.97\n",
-      "Unique Shipping Cities: 8\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "list_of_transactions = load_transactions(\"data/clothing_transactions.csv\")\n",
-    "inject_dirty_values(list_of_transactions)\n",
-    "clean_invalid_prices(list_of_transactions)\n",
-    "apply_coupon_discounts(list_of_transactions)\n",
-    "add_days_since_purchase(list_of_transactions)\n",
-    "profile_transactions_summary(list_of_transactions)\n"
+    "    "
    ]
   },
   {
@@ -412,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 123,
    "id": "0ffa7ab0",
    "metadata": {},
    "outputs": [],
@@ -423,37 +360,52 @@
     "        if isinstance(t.price, float):\n",
     "            city_revenue [t.shipping_city] += t.price * t.quantity if t.price else 0\n",
     "            \n",
-    "\n",
-    "\n",
-    "    return dict(city_revenue )\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "    return dict(city_revenue )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8334c0e",
+   "metadata": {},
+   "source": [
+    "##### created a method for serialization and trying to get the json and paraquet fiels "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5685a622",
+   "execution_count": 124,
+   "id": "c251677c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def export_cleaned_transactions(transactions: list, json_file: str, parquet_file: str) -> None:\n",
+    "    data_records = [transaction.__dict__ for transaction in transactions]\n",
+    "    \n",
+    "    # Save as JSON\n",
+    "    with open(json_file, \"w\") as json_out:\n",
+    "        json.dump(data_records, json_out)\n",
+    "    \n",
+    "    # Save as Parquet\n",
+    "    table = pa.Table.from_pandas(pd.DataFrame(data_records))\n",
+    "    pq.write_table(table, parquet_file)  \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "c180f91e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 7: Cleaned invalid prices — before: 3, after: 0\n",
-      "\n",
-      "Step 8: Applied coupon discounts (coupon_code → discount_pct).\n",
-      "\n",
-      "Step 9: Added 'days_since_purchase' to each transaction.\n",
-      "\n",
       "Step 5: Quick Profiling\n",
       "Price Stats - Minimun: 0.0, Mean: 69.02, Maximum: 119.97\n",
       "Unique Shipping Cities: 8\n",
       "\n",
-      "Revenue by city: {'Halifax': 14672.939999999997, 'Vancouver': 20080.270000000008, 'Edmonton': 17604.15, 'Montreal': 17108.41, 'Calgary': 13570.070000000002, 'Toronto': 18650.100000000006, 'Ottawa': 17658.46, 'Winnipeg': 15552.23000000001}\n"
+      "City Revenue: {'Halifax': 14672.939999999997, 'Vancouver': 20080.270000000008, 'Edmonton': 17604.15, 'Montreal': 17108.41, 'Calgary': 13570.070000000002, 'Toronto': 18650.100000000006, 'Ottawa': 17658.46, 'Winnipeg': 15552.23000000001}\n"
      ]
     }
    ],
@@ -464,9 +416,52 @@
     "apply_coupon_discounts(list_of_transactions)\n",
     "add_days_since_purchase(list_of_transactions)\n",
     "profile_transactions_summary(list_of_transactions)\n",
-    "city_revenue  = aggregate_revenue_by_city(list_of_transactions)\n",
-    "print(\"City Revenue:\", city_revenue )\n",
+    "city_revenue = aggregate_revenue_by_city(list_of_transactions)\n",
+    "export_cleaned_transactions(list_of_transactions, \"data/cleaned_transactions.json\", \"data/cleaned_transactions.parquet\")\n",
+    "\n",
+    "print(\"City Revenue:\", city_revenue)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e799d07",
+   "metadata": {},
+   "source": [
+    "##### Brief explanation regarding how I used oop's \n",
+    "##### Object-Oriented Programming (OOP) made it easy to divide this project into reusable, modular, and logical components. Encapsulating the # cleaning, transformation, and calculation logic into a class (`Transaction`) allowed adding behavior to each transaction record inline. This enhanced code readability and lowered the error potential since behavior and data were not separate. It also made testing and debugging a single record easier. OOP overall improved code structure and minimized the complexity of working with hundreds of records.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d781b364",
+   "metadata": {},
+   "source": [
+    "##### Merging the both CSV's files Clothing_transactions and address_dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8335252",
+   "metadata": {},
+   "source": [
+    "| Field             | Type      | Description                                       | Source                |\n",
+    "|------------------|-----------|---------------------------------------------------|------------------------|\n",
+    "| date             | string    | Purchase date of the transaction                 |clothing_transactions .csv      |\n",
+    "| customer_id      | string    | Unique identifier for each customer              | clothing_transactions.csv      |\n",
+    "| product     | string    | Identifier for the product purchased             | clothing_transactions.csv      |\n",
+    "| postal_code     | string    | Name of the product                              | address_datasetl.csv     |\n",
+    "| street        | string    | Category of the street                        | address_dataset.csv     |\n",
+    "| city           |string    | Description of the city                       | address_dataset.csv     |\n",
+    "|country        | String   |Description of the country                      |address_dataset.csv\n",
+    "|province      | string    | Description of the province                      | address_dataset.csv     |\n",
+    "| price            | float     | Unit price of the product                        | clothing_transactions.csv      |\n",
+    "| quantity         | int       | Quantity purchased                               | clothing_transactions.csv      |\n",
+    "| coupon_code      | string    | Promotional code used for the transaction        | clothing_transactions.csv      |\n",
+    "| shipping_city    | string    | City where the product is being shipped          | clothing_transactions.csv      |\n",
+    "| discount_pct     | float     | Numeric discount derived from coupon_code        | Derived                |\n",
+    "| days_since_purchase | int   | Days since the transaction date                  | Derived                |\n"
    ]
   }
  ],
