checking all the code once and finalized it

--- a/lab2-9013742.ipynb
+++ b/lab2-9013742.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "id": "db14b3cd",
    "metadata": {},
    "outputs": [],
@@ -145,8 +145,8 @@
     "    coupon_code: str\n",
     "    shipping_city: str\n",
     "    postal_code: str\n",
-    "    coupon_discount_rate: float = field(default=0.0)  # Derived from coupon_code\n",
-    "    days_since_purchase: Optional[int] = field(default=None)  # Derived from purchase date\n",
+    "    coupon_discount_rate: float = field(default=0.0)  # Deriving from the  coupon_code\n",
+    "    days_since_purchase: Optional[int] = field(default=None)  # Deriving  from the  purchase date\n",
     "\n",
     "    \n"
    ]
@@ -187,7 +187,7 @@
    "id": "e66387e3",
    "metadata": {},
    "source": [
-    "##### Creatiing method called profile_transactions_summary for gettting min/max/mean of price and unique city. It is taking the "
+    "##### Creatiing method called profile_transactions_summary for gettting min/max/mean of price and unique city. "
    ]
   },
   {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "id": "c251677c",
    "metadata": {},
    "outputs": [],
@@ -381,11 +381,11 @@
     "def export_cleaned_transactions(transactions: list, json_file: str, parquet_file: str) -> None:\n",
     "    data_records = [transaction.__dict__ for transaction in transactions]\n",
     "    \n",
-    "    # Save as JSON\n",
+    "    # Saving  as JSON\n",
     "    with open(json_file, \"w\") as json_out:\n",
     "        json.dump(data_records, json_out)\n",
     "    \n",
-    "    # Save as Parquet\n",
+    "    # Saving as Parquet\n",
     "    table = pa.Table.from_pandas(pd.DataFrame(data_records))\n",
     "    pq.write_table(table, parquet_file)  \n",
     "    \n"
